[package]
name = "jweust_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
encoding_rs = "0.8.32"

windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
