[package]
name = "jweust_simple"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units
panic = "abort"

[dependencies]
chrono = "0.4.24"
encoding_rs = "0.8.32"
jni = { version = "0.21.1" , features = ["invocation"]}
once_cell = "1.17.1"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }



[build-dependencies]
embed-manifest = "1.3.1"
winresource = "0.1.15"